# Wikipull

./: README.md  pyproject.toml
src/wikipull/: wikipull.py
